--- a/src/patternfly/components/Label/label.scss
+++ b/src/patternfly/components/Label/label.scss
@@ -103,6 +103,56 @@
   --#{$label}--m-purple--m-outline--BorderColor: var(--pf-t--global--border--color--nonstatus--purple--default);
   --#{$label}--m-purple--m-outline--m-clickable--hover--BorderColor: var(--pf-t--global--border--color--nonstatus--purple--hover);
 
+  // Success
+  --#{$label}--m-success--BackgroundColor: var(--pf-t--global--border--color--status--success--default);
+  --#{$label}--m-success--Color: var(--pf-t--global--text--color--status--on-success--default);
+  --#{$label}--m-success__icon--Color: var(--pf-t--global--icon--color--status--on-success--default);
+  --#{$label}--m-success--m-clickable--hover--BackgroundColor: var(--pf-t--global--border--color--status--success--hover);
+  --#{$label}--m-success--m-clickable--hover--Color: var(--pf-t--global--text--color--status--on-success--hover);
+  --#{$label}--m-success--m-clickable--hover__icon--Color: var(--pf-t--global--icon--color--status--on-success--hover);
+  --#{$label}--m-success--m-outline--BorderColor: var(--pf-t--global--border--color--status--success--default);
+  --#{$label}--m-success--m-outline--m-clickable--hover--BorderColor: var(--pf-t--global--border--color--status--success--hover);
+
+  // Warning
+  --#{$label}--m-warning--BackgroundColor: var(--pf-t--global--border--color--status--warning--default);
+  --#{$label}--m-warning--Color: var(--pf-t--global--text--color--status--on-warning--default);
+  --#{$label}--m-warning__icon--Color: var(--pf-t--global--icon--color--status--on-warning--default);
+  --#{$label}--m-warning--m-clickable--hover--BackgroundColor: var(--pf-t--global--border--color--status--warning--hover);
+  --#{$label}--m-warning--m-clickable--hover--Color: var(--pf-t--global--text--color--status--on-warning--hover);
+  --#{$label}--m-warning--m-clickable--hover__icon--Color: var(--pf-t--global--icon--color--status--on-warning--hover);
+  --#{$label}--m-warning--m-outline--BorderColor: var(--pf-t--global--border--color--status--warning--default);
+  --#{$label}--m-warning--m-outline--m-clickable--hover--BorderColor: var(--pf-t--global--border--color--status--warning--hover);
+
+  // Danger
+  --#{$label}--m-danger--BackgroundColor: var(--pf-t--global--border--color--status--danger--default);
+  --#{$label}--m-danger--Color: var(--pf-t--global--text--color--status--on-danger--default);
+  --#{$label}--m-danger__icon--Color: var(--pf-t--global--icon--color--status--on-danger--default);
+  --#{$label}--m-danger--m-clickable--hover--BackgroundColor: var(--pf-t--global--border--color--status--danger--hover);
+  --#{$label}--m-danger--m-clickable--hover--Color: var(--pf-t--global--text--color--status--on-danger--hover);
+  --#{$label}--m-danger--m-clickable--hover__icon--Color: var(--pf-t--global--icon--color--status--on-danger--hover);
+  --#{$label}--m-danger--m-outline--BorderColor: var(--pf-t--global--border--color--status--danger--default);
+  --#{$label}--m-danger--m-outline--m-clickable--hover--BorderColor: var(--pf-t--global--border--color--status--danger--hover);
+
+  // Info
+  --#{$label}--m-info--BackgroundColor: var(--pf-t--global--border--color--status--info--default);
+  --#{$label}--m-info--Color: var(--pf-t--global--text--color--status--on-info--default);
+  --#{$label}--m-info__icon--Color: var(--pf-t--global--icon--color--status--on-info--default);
+  --#{$label}--m-info--m-clickable--hover--BackgroundColor: var(--pf-t--global--border--color--status--info--hover);
+  --#{$label}--m-info--m-clickable--hover--Color: var(--pf-t--global--text--color--status--on-info--hover);
+  --#{$label}--m-info--m-clickable--hover__icon--Color: var(--pf-t--global--icon--color--status--on-info--hover);
+  --#{$label}--m-info--m-outline--BorderColor: var(--pf-t--global--border--color--status--info--default);
+  --#{$label}--m-info--m-outline--m-clickable--hover--BorderColor: var(--pf-t--global--border--color--status--info--hover);
+
+  // Custom
+  --#{$label}--m-custom--BackgroundColor: var(--pf-t--global--border--color--status--custom--default);
+  --#{$label}--m-custom--Color: var(--pf-t--global--text--color--status--on-custom--default);
+  --#{$label}--m-custom__icon--Color: var(--pf-t--global--icon--color--status--on-custom--default);
+  --#{$label}--m-custom--m-clickable--hover--BackgroundColor: var(--pf-t--global--border--color--status--custom--hover);
+  --#{$label}--m-custom--m-clickable--hover--Color: var(--pf-t--global--text--color--status--on-custom--hover);
+  --#{$label}--m-custom--m-clickable--hover__icon--Color: var(--pf-t--global--icon--color--status--on-custom--hover);
+  --#{$label}--m-custom--m-outline--BorderColor: var(--pf-t--global--border--color--status--custom--default);
+  --#{$label}--m-custom--m-outline--m-clickable--hover--BorderColor: var(--pf-t--global--border--color--status--custom--hover);
+
   // Clickable
   --#{$label}--m-clickable--hover--BorderWidth: 0;
   --#{$label}--m-clickable--hover--BorderColor: transparent;
@@ -278,6 +328,61 @@
     --#{$label}--m-clickable--hover__icon--Color: var(--#{$label}--m-purple--m-clickable--hover__icon--Color);
     --#{$label}--m-outline--BorderColor: var(--#{$label}--m-purple--m-outline--BorderColor);
     --#{$label}--m-outline--m-clickable--hover--BorderColor: var(--#{$label}--m-purple--m-outline--m-clickable--hover--BorderColor);
+  }
+
+  &.pf-m-success {
+    --#{$label}--BackgroundColor: var(--#{$label}--m-success--BackgroundColor);
+    --#{$label}--Color: var(--#{$label}--m-success--Color);
+    --#{$label}__icon--Color: var(--#{$label}--m-success__icon--Color);
+    --#{$label}--m-clickable--hover--BackgroundColor: var(--#{$label}--m-success--m-clickable--hover--BackgroundColor);
+    --#{$label}--m-clickable--hover--Color: var(--#{$label}--m-success--m-clickable--hover--Color);
+    --#{$label}--m-clickable--hover__icon--Color: var(--#{$label}--m-success--m-clickable--hover__icon--Color);
+    --#{$label}--m-outline--BorderColor: var(--#{$label}--m-success--m-outline--BorderColor);
+    --#{$label}--m-outline--m-clickable--hover--BorderColor: var(--#{$label}--m-success--m-outline--m-clickable--hover--BorderColor);
+  }
+
+  &.pf-m-warning {
+    --#{$label}--BackgroundColor: var(--#{$label}--m-warning--BackgroundColor);
+    --#{$label}--Color: var(--#{$label}--m-warning--Color);
+    --#{$label}__icon--Color: var(--#{$label}--m-warning__icon--Color);
+    --#{$label}--m-clickable--hover--BackgroundColor: var(--#{$label}--m-warning--m-clickable--hover--BackgroundColor);
+    --#{$label}--m-clickable--hover--Color: var(--#{$label}--m-warning--m-clickable--hover--Color);
+    --#{$label}--m-clickable--hover__icon--Color: var(--#{$label}--m-warning--m-clickable--hover__icon--Color);
+    --#{$label}--m-outline--BorderColor: var(--#{$label}--m-warning--m-outline--BorderColor);
+    --#{$label}--m-outline--m-clickable--hover--BorderColor: var(--#{$label}--m-warning--m-outline--m-clickable--hover--BorderColor);
+  }
+
+  &.pf-m-danger {
+    --#{$label}--BackgroundColor: var(--#{$label}--m-danger--BackgroundColor);
+    --#{$label}--Color: var(--#{$label}--m-danger--Color);
+    --#{$label}__icon--Color: var(--#{$label}--m-danger__icon--Color);
+    --#{$label}--m-clickable--hover--BackgroundColor: var(--#{$label}--m-danger--m-clickable--hover--BackgroundColor);
+    --#{$label}--m-clickable--hover--Color: var(--#{$label}--m-danger--m-clickable--hover--Color);
+    --#{$label}--m-clickable--hover__icon--Color: var(--#{$label}--m-danger--m-clickable--hover__icon--Color);
+    --#{$label}--m-outline--BorderColor: var(--#{$label}--m-danger--m-outline--BorderColor);
+    --#{$label}--m-outline--m-clickable--hover--BorderColor: var(--#{$label}--m-danger--m-outline--m-clickable--hover--BorderColor);
+  }
+
+  &.pf-m-info {
+    --#{$label}--BackgroundColor: var(--#{$label}--m-info--BackgroundColor);
+    --#{$label}--Color: var(--#{$label}--m-info--Color);
+    --#{$label}__icon--Color: var(--#{$label}--m-info__icon--Color);
+    --#{$label}--m-clickable--hover--BackgroundColor: var(--#{$label}--m-info--m-clickable--hover--BackgroundColor);
+    --#{$label}--m-clickable--hover--Color: var(--#{$label}--m-info--m-clickable--hover--Color);
+    --#{$label}--m-clickable--hover__icon--Color: var(--#{$label}--m-info--m-clickable--hover__icon--Color);
+    --#{$label}--m-outline--BorderColor: var(--#{$label}--m-info--m-outline--BorderColor);
+    --#{$label}--m-outline--m-clickable--hover--BorderColor: var(--#{$label}--m-info--m-outline--m-clickable--hover--BorderColor);
+  }
+
+    &.pf-m-custom {
+    --#{$label}--BackgroundColor: var(--#{$label}--m-custom--BackgroundColor);
+    --#{$label}--Color: var(--#{$label}--m-custom--Color);
+    --#{$label}__icon--Color: var(--#{$label}--m-custom__icon--Color);
+    --#{$label}--m-clickable--hover--BackgroundColor: var(--#{$label}--m-custom--m-clickable--hover--BackgroundColor);
+    --#{$label}--m-clickable--hover--Color: var(--#{$label}--m-custom--m-clickable--hover--Color);
+    --#{$label}--m-clickable--hover__icon--Color: var(--#{$label}--m-custom--m-clickable--hover__icon--Color);
+    --#{$label}--m-outline--BorderColor: var(--#{$label}--m-custom--m-outline--BorderColor);
+    --#{$label}--m-outline--m-clickable--hover--BorderColor: var(--#{$label}--m-custom--m-outline--m-clickable--hover--BorderColor);
   }
 
   &.pf-m-compact {
