--- a/src/patternfly/components/Card/card-title-text.hbs
+++ b/src/patternfly/components/Card/card-title-text.hbs
@@ -5,7 +5,11 @@
   {{#if card-title-text--attribute}}
     {{{card-title-text--attribute}}}
   {{/if}}>
-  {{#if card-title-text--value}}
+  {{#if card-title-text--IsButton}}
+    {{#> button button--type="button" button--IsLink=true button--IsInline=true }}
+      {{{card-title-text--value}}}
+    {{/button}}
+  {{else if card-title-text--value}}
     {{{card-title-text--value}}}
   {{else if @partial-block}}
     {{> @partial-block}}
