--- a/src/patternfly/components/Breadcrumb/breadcrumb.scss
+++ b/src/patternfly/components/Breadcrumb/breadcrumb.scss
@@ -1,6 +1,5 @@
-// @debug $breadcrumb; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
-
-:root, .#{$breadcrumb} {
+:where(:root),
+:where(.#{$breadcrumb}) {
   // Breadcrumb item
   --#{$breadcrumb}__item--FontSize: var(--pf-t--global--font--size--body--sm);
   --#{$breadcrumb}__item--LineHeight: var(--pf-t--global--font--line-height--body);
@@ -12,6 +11,7 @@
   --#{$breadcrumb}__item-divider--FontSize: var( --pf-t--global--font--size--body--sm);
 
   // Breadcrumb link
+  --#{$breadcrumb}__link--PaddingInline: var(--pf-t--global--spacer--sm); // use a mutable value for alignment control
   --#{$breadcrumb}__link--Color: var(--pf-t--global--text--color--link--default);
   --#{$breadcrumb}__link--TextDecoration: var(--pf-t--global--link--text-decoration);
   --#{$breadcrumb}__link--hover--Color: var(--pf-t--global--text--color--link--hover);
@@ -53,6 +53,10 @@
   white-space: nowrap; // Keeps the item-divider and __link text on the same line
   list-style: none;
 
+  &:first-child {
+    margin-inline-start: calc(var(--#{$breadcrumb}__link--PaddingInlineStart, var(--#{$breadcrumb}__link--PaddingInline)) * -1); // left align first item in list with list bounds while retaining link padding
+  }
+
   &:not(:last-child) {
     margin-inline-end: var(--#{$breadcrumb}__item--MarginRight);
   }
@@ -70,6 +74,8 @@
 
 // Breadcrumb link
 .#{$breadcrumb}__link {
+  padding-inline-start: var(--#{$breadcrumb}__link--PaddingInlineStart, var(--#{$breadcrumb}__link--PaddingInline)); // use a mutable value for alignment control
+  padding-inline-end: var(--#{$breadcrumb}__link--PaddingInlineEnd, var(--#{$breadcrumb}__link--PaddingInline)); // use a mutable value for alignment control
   font-size: inherit;
   font-weight: var(--#{$breadcrumb}__link--FontWeight);
   line-height: inherit;
